TP-2008 fix mobile ad z-index

--- a/drupal/sites/all/themes/tp4/sass/modules/_footer.scss
+++ b/drupal/sites/all/themes/tp4/sass/modules/_footer.scss
@@ -26,8 +26,15 @@
     max-width: 980px;
     margin-left: auto;
     margin-right: auto;
-    &:first-child {
-      padding-top: 30px;
+    @include breakpoint($breakpoint-mobile) {
+      &:first-child {
+        padding-top: 0;
+        }
+    }
+    @include breakpoint($breakpoint-tablet) {
+      &:first-child {
+        padding-top: 30px;
+      }
     }
   }
 }
